--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -1,7 +1,24 @@
 {
-  "sourceLanguage" : "en",
+  "sourceLanguage" : "ru",
   "strings" : {
+    "%@" : {
 
+    },
+    "Ближайшие клубы" : {
+
+    },
+    "Карта" : {
+
+    },
+    "Клубы" : {
+
+    },
+    "Поиск" : {
+
+    },
+    "Тут был геннадий" : {
+
+    }
   },
   "version" : "1.0"
 }
