--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -1,7 +1,16 @@
 {
   "sourceLanguage" : "ru",
   "strings" : {
-    "%@" : {
+    "%lld м" : {
+
+    },
+    "4.9" : {
+
+    },
+    "140₽/час" : {
+
+    },
+    "RTX 4070 Ti" : {
 
     },
     "Ближайшие клубы" : {
