--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -1,10 +1,10 @@
 {
   "sourceLanguage" : "ru",
   "strings" : {
-    "%@" : {
+    " ₽/час" : {
 
     },
-    "%lld м" : {
+    "%@" : {
 
     },
     "Ближайшие клубы" : {
@@ -14,6 +14,9 @@
 
     },
     "Клубы" : {
+
+    },
+    "от " : {
 
     },
     "Поиск" : {
