--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -7,6 +7,9 @@
     "%@" : {
 
     },
+    "%lld" : {
+
+    },
     "Ближайшие клубы" : {
 
     },
@@ -16,13 +19,16 @@
     "Клубы" : {
 
     },
-    "Описание" : {
-
-    },
     "от " : {
 
     },
+    "Открыть прайс" : {
+
+    },
     "Поиск" : {
+
+    },
+    "Стоимость" : {
 
     },
     "Тут был геннадий" : {
