--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -4,9 +4,6 @@
     " ₽/час" : {
 
     },
-    "%@" : {
-
-    },
     "%lld" : {
 
     },
@@ -22,13 +19,10 @@
     "от " : {
 
     },
-    "Открыть прайс" : {
+    "Ошибка загрузки картинки" : {
 
     },
     "Поиск" : {
-
-    },
-    "Стоимость" : {
 
     },
     "Тут был геннадий" : {
