Addd empty news

--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -10,10 +10,19 @@
     "Ближайшие клубы" : {
 
     },
+    "Заходите позже, чтобы узнать последние обновления и сплетни в мире игр" : {
+
+    },
     "Карта" : {
 
     },
     "Клубы" : {
+
+    },
+    "Новости" : {
+
+    },
+    "Новости скоро будут!" : {
 
     },
     "от " : {
