--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -10,6 +10,9 @@
     "%lld пк" : {
 
     },
+    "120" : {
+
+    },
     "Ближайшие клубы" : {
 
     },
@@ -34,10 +37,16 @@
     "Ошибка загрузки картинки" : {
 
     },
+    "Подробнее" : {
+
+    },
     "Поиск" : {
 
     },
     "Тут был геннадий" : {
+
+    },
+    "Фото нет" : {
 
     }
   },
