Создал акции, добавил в фабрику, добавил в фабрику новости

--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -10,13 +10,13 @@
     "%lld пк" : {
 
     },
+    "Акции" : {
+
+    },
     "Ближайшие клубы" : {
 
     },
     "Заходите позже, чтобы узнать последние обновления и сплетни в мире игр" : {
-
-    },
-    "Карта" : {
 
     },
     "Клубы" : {
@@ -35,9 +35,6 @@
 
     },
     "Поиск" : {
-
-    },
-    "Тут был геннадий" : {
 
     }
   },
