Добавление expandenText, добавление зум картинки и изменение прайс вью

--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -16,6 +16,12 @@
     "Ближайшие клубы" : {
 
     },
+    "Все тарифы" : {
+
+    },
+    "Еще" : {
+
+    },
     "Заходите позже, чтобы узнать последние обновления и сплетни в мире игр" : {
 
     },
@@ -38,6 +44,9 @@
 
     },
     "Поиск" : {
+
+    },
+    "Свернуть" : {
 
     },
     "Тут был геннадий" : {
