Добавлен попап с фильтрами

--- a/GameSearch/Localizable.xcstrings
+++ b/GameSearch/Localizable.xcstrings
@@ -13,6 +13,9 @@
     "Ближайшие клубы" : {
 
     },
+    "Видеокарта" : {
+
+    },
     "Все тарифы" : {
 
     },
@@ -23,6 +26,9 @@
 
     },
     "Клубы" : {
+
+    },
+    "Не выбрано" : {
 
     },
     "Новости" : {
@@ -37,7 +43,13 @@
     "Поиск" : {
 
     },
+    "Применить" : {
+
+    },
     "Свернуть" : {
+
+    },
+    "Фильтры" : {
 
     }
   },
